// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the BaseLinkButton matches the snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
}

.c0 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1:hover {
  color: #000;
  background-color: #fff;
  border-color: #888;
}

.c2::-moz-focus-inner {
  border-width: 0;
}

.c2:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c3:active {
  color: #000;
  background-color: #f7f7f7;
  border-color: #888;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c0::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<a
  className="c0 Button-kDSBcD c1 Button-kDSBcD c2 Button-kDSBcD c3 c4"
>
  LinkButtonValue
</a>
`;

exports[`the LinkButton matches the snapshot 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
}

.c1 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c2:hover {
  color: #000;
  background-color: #fff;
  border-color: #888;
}

.c3::-moz-focus-inner {
  border-width: 0;
}

.c3:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c4:active {
  color: #000;
  background-color: #f7f7f7;
  border-color: #888;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c0 {
  font-size: 0.8rem;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c1::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<a
  className="c0 Button-kDSBcD c1 Button-kDSBcD c2 Button-kDSBcD c3 Button-kDSBcD c4 c5"
>
  LinkButtonValue
</a>
`;
